Update python dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,24 @@ Authors@R:
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
+Config/reticulate:
+  list(
+    packages = list(
+      list(package = "numpy", pip = TRUE),
+      list(package = "nltk", pip = TRUE),
+      list(package = "joblib", pip = TRUE),
+      list(package = "scikit-learn", pip = TRUE),
+      list(package = "tensorflow", pip = TRUE),
+      list(package = "pdfminer", pip = TRUE)
+    )
+  )
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
+    reticulate,
     shiny,
     dplyr,
     tidytext,
@@ -23,18 +35,4 @@ Imports:
     purrr,
     tidyr,
     magrittr,
-    reticulate,
     tokenizers
-
-Config/reticulate:
-  list(
-    packages = list(
-      list(package = "numpy", pip = TRUE),
-      list(package = "joblib", pip = TRUE),
-      list(package = "scikit-learn", pip = TRUE),
-      list(package = "tensorflow", pip = TRUE),
-      list(package = "pdfminer", pip = TRUE),
-      list(package = "nltk", pip = TRUE)
-    )
-  )
-
