Add new packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,16 +28,17 @@ Imports:
     dplyr,
     DT,
     fastTextR,
+    knitr,
     magrittr,
     memoise,
     purrr,
     reticulate,
     shiny,
     shinycssloaders,
+    shinyjs,
     stopwords,
     stringr,
     tidyr,
     tidytext,
     tokenizers,
-    vroom,
-    shinyjs
+    vroom
