--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
-Package: CausalityExtraction
-Title: Causal Knowledge Extraction from Scholarly Papers in Social Sciences
-Version: 0.0.5.300
+Package: HypothesisReader
+Title: Hypothesis Extraction and Analysis for Scholarly Papers in Social Sciences
+Version: 0.0.5.400
 Authors@R: 
     person(given = "Evan",
            family = "Canfield",
            role = c("aut", "cre"),
            email = "canfielder@gmail.com",
            comment = c(ORCID = "0000-0002-8943-028X"))
-Description: Extracts causal knowledge from academic papers utilizing the 
+Description: Extracts hypothesis statements from social science academic 
+ papers, and then analyzes those statements utilizing the
  methods and procedures outlined in the <insert academic paper reference>. The 
  package processes PDF documents into raw text (via Tika) and then extracts 
  hypothesis or proposition statements along with the following key features: 
