--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,8 @@ Imports:
     tidyr,
     tidytext,
     tokenizers,
-    vroom,
-    rtika
+    vroom
+Remotes:
+  github::ropensci/rtika
 Depends: 
     R (>= 2.10)
